@@ -52,6 +52,7 @@ extern swig_class cWxGridSizeEvent;
 extern swig_class cWxGridEditorCreatedEvent;
 extern swig_class cWxTreeEvent;
 extern swig_class cWxSplitterEvent;
+extern swig_class cWxScrollWinEvent;
 extern swig_class cWxMoveEvent;
 extern swig_class cWxListEvent;
 extern swig_class cWxWizardEvent;
@@ -250,6 +251,19 @@ static const wxEventType *sashEvents[] =
     (const wxEventType *)0
 };
 
+static const wxEventType *scrollWinEvents[] =
+{
+  &wxEVT_SCROLLWIN_TOP,
+  &wxEVT_SCROLLWIN_BOTTOM,
+  &wxEVT_SCROLLWIN_LINEUP,
+  &wxEVT_SCROLLWIN_LINEDOWN,
+  &wxEVT_SCROLLWIN_PAGEUP,
+  &wxEVT_SCROLLWIN_PAGEDOWN,
+  &wxEVT_SCROLLWIN_THUMBTRACK,
+  &wxEVT_SCROLLWIN_THUMBRELEASE,
+  (const wxEventType *)0
+};
+
 //IMPLEMENT_ABSTRACT_CLASS(wxRbCallback, wxObject);
 
 class wxRbCallback : public wxObject 
@@ -308,6 +322,8 @@ public:
 			cEvent = cWxMoveEvent.klass;
         else if(event.IsKindOf(CLASSINFO(wxListEvent)))
             cEvent = cWxListEvent.klass;
+        else if(event.IsKindOf(CLASSINFO(wxScrollWinEvent)))
+            cEvent = cWxScrollWinEvent.klass;
         else if(event.IsKindOf(CLASSINFO(wxWizardEvent)))
             cEvent = cWxWizardEvent.klass;
         else if(event.IsKindOf(CLASSINFO(wxCommandEvent)))
@@ -939,6 +955,45 @@ static VALUE evt_sash_dragged_range(int argc_1, int argc_2, VALUE *argv, VALUE s
 }
 
 
+static VALUE evt_scrollwin_top(int argc, VALUE *argv, VALUE self) 
+{
+    return internal_evt_no_parameters(argc, argv, self, wxEVT_SCROLLWIN_TOP);
+}
+
+static VALUE evt_scrollwin_bottom(int argc, VALUE *argv, VALUE self) 
+{
+    return internal_evt_no_parameters(argc, argv, self, wxEVT_SCROLLWIN_BOTTOM);
+}
+
+static VALUE evt_scrollwin_lineup(int argc, VALUE *argv, VALUE self) 
+{
+    return internal_evt_no_parameters(argc, argv, self, wxEVT_SCROLLWIN_LINEUP);
+}
+
+static VALUE evt_scrollwin_linedown(int argc, VALUE *argv, VALUE self) 
+{
+    return internal_evt_no_parameters(argc, argv, self, wxEVT_SCROLLWIN_LINEDOWN);
+}
+
+static VALUE evt_scrollwin_pageup(int argc, VALUE *argv, VALUE self) 
+{
+    return internal_evt_no_parameters(argc, argv, self, wxEVT_SCROLLWIN_PAGEUP);
+}
+
+static VALUE evt_scrollwin_pagedown(int argc, VALUE *argv, VALUE self) 
+{
+    return internal_evt_no_parameters(argc, argv, self, wxEVT_SCROLLWIN_PAGEDOWN);
+}
+
+static VALUE evt_scrollwin_thumbtrack(int argc, VALUE *argv, VALUE self) 
+{
+    return internal_evt_no_parameters(argc, argv, self, wxEVT_SCROLLWIN_THUMBTRACK);
+}
+
+static VALUE evt_scrollwin_thumbrelease(int argc, VALUE *argv, VALUE self) 
+{
+    return internal_evt_no_parameters(argc, argv, self, wxEVT_SCROLLWIN_THUMBRELEASE);
+}
 // TODO:  Add for ListEvent types?  Is this needed?
 
 %}
@@ -1047,6 +1102,15 @@ static VALUE evt_sash_dragged_range(int argc_1, int argc_2, VALUE *argv, VALUE s
     rb_define_method(cWxEvtHandler.klass, "evt_grid_cmd_range_select", VALUEFUNC(evt_grid_cmd_range_select), -1);
     rb_define_method(cWxEvtHandler.klass, "evt_grid_editor_created", VALUEFUNC(evt_grid_editor_created), -1);
     rb_define_method(cWxEvtHandler.klass, "evt_grid_cmd_editor_created", VALUEFUNC(evt_grid_cmd_editor_created), -1); 
+
+	rb_define_method(cWxEvtHandler.klass, "evt_scrollwin", VALUEFUNC(evt_scrollwin), -1);
+	rb_define_method(cWxEvtHandler.klass, "evt_scrollwin_top", VALUEFUNC(evt_scrollwin_top), -1);
+	rb_define_method(cWxEvtHandler.klass, "evt_scrollwin_bottom", VALUEFUNC(evt_scrollwin_bottom), -1);
+	rb_define_method(cWxEvtHandler.klass, "evt_scrollwin_lineup", VALUEFUNC(evt_scrollwin_lineup), -1);
+	rb_define_method(cWxEvtHandler.klass, "evt_scrollwin_linedown", VALUEFUNC(evt_scrollwin_linedown), -1);
+	rb_define_method(cWxEvtHandler.klass, "evt_scrollwin_pageup", VALUEFUNC(evt_scrollwin_pageup), -1);
+	rb_define_method(cWxEvtHandler.klass, "evt_scrollwin_pagedown", VALUEFUNC(evt_scrollwin_pagedown), -1);
+	rb_define_method(cWxEvtHandler.klass, "evt_scrollwin_thumbtrack", VALUEFUNC(evt_scrollwin_thumbtrack), -1);
     rb_define_method(cWxEvtHandler.klass, "evt_wizard_page_changed", VALUEFUNC(evt_wizard_page_changed), -1);    
 	rb_define_method(cWxEvtHandler.klass, "evt_wizard_page_changing", VALUEFUNC(evt_wizard_page_changing), -1);
 	rb_define_method(cWxEvtHandler.klass, "evt_wizard_cancel", VALUEFUNC(evt_wizard_cancel), -1);
