@@ -1,3 +1,4 @@
+- Added ScrollWinEvent class and sample (Alex Fenton and Joe Seeley)
 - Exposed member variables in KeyEvent (Sean Long)
 - Added Sash classes and sample, but they don't yet work perfectly, at 
     least under Linux (Alex Fenton)
